# pusto_studio

./: README.md
src/: pyproject.toml
src/core/models/: base.py  player_django.py  players.py
src/core/models/mixins/: __init__.py  id_pk_int.py
src/crud/: player.py
src/utils/: player_statistic_csv.py
